# au-ksef-unstructured

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
scripts/: generate_schema.py
src/app/: config.py  dependencies.py  main.py
src/app/prompts/: extraction.py
src/app/routes/: extract.py  health.py
src/app/schemas/: default_invoice_schema.json  extract.py  invoice.py
src/app/services/: llm_extractor.py  pdf_parser.py
tests/: conftest.py
tests/integration/: test_extract_endpoint.py
tests/unit/: test_auth.py  test_invoice_schema.py  test_llm_extractor.py  test_pdf_parser.py
